syntax = "proto3";

package edu.gla.kail.ad.core;

option java_package = "edu.gla.kail.ad.core";

message InteractionRequest {
    int64 start_time = 1;
    string client_id = 2;
    Interaction interaction = 3;
}

message InteractionResponse {
    string response_id = 1;
    int64 time = 2;
    string client_id = 3;
    repeated Interaction interaction = 4;
}

message Interaction {
    enum InteractionType {
        TEXT = 0;
        AUDIO = 1;
        ACTION = 2;
    }
    string text = 1;
    string audio_bytes = 2;
    // A requested interaction (like a click on a result).
    // additional data about the type of click - result id, etc...
    repeated string action = 3;
    InteractionType type = 4;
    string device_type = 5;
}

message LogEntry {
    string session_id = 1;
    repeated Turn turn = 2;
}

message Turn {
    ResponseLog response_log = 1;
    RequestLog request_log = 2;
    repeated ResponseLog candidate_response = 3;
}

message RequestLog {
    string request_id = 1;
    int64 time = 2;
    string client_id = 3;
    Interaction interaction = 4;
}

message ResponseLog {
    string response_id = 1;
    int64 time = 2;
    string client_id = 3;
    string raw_response = 5;
    repeated SystemAct action = 7;
    // Context?
}

message SystemAct {
    string action = 1;
    repeated Slot slot = 2;
    Interaction interaction = 6;
}

message Slot {
    string name = 1;
    string value = 2;
}


//make some documentations